# ECG-Assisted-Emotion-Monitoring

./: .gitignore  Emotion detection based on facial recognition  I2C05.7z  LICENSE  README.md  max30102  max30102.cpp
Documents/: README.md  sensors_connection_instruction.fzz
Documents/zh-instruction/: README.md
EAEM_GUI/: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
EAEM_GUI/arithmetic/: video_processor.cpp  video_processor.h
EAEM_GUI/driver/: camera_driver.cpp  camera_driver.h  i2c_driver.cpp  i2c_driver.h  plot_driver.cpp  plot_driver.h
EAEM_GUI/interface/: dashboard.cpp  dashboard.h  ecg_hrv.cpp  ecg_hrv.h  emotion_indicator.cpp  emotion_indicator.h  mainwindow.cpp  mainwindow.h  qcustomplot.cpp  sensor_aht20.cpp  sensor_aht20.h  sensor_max30102.cpp  sensor_max30102.h  temperature_humidity.cpp  temperature_humidity.h  video_display.cpp  video_display.h
EAEM_GUI/module/: camera_capture.cpp  camera_capture.h
EAEM_GUI/ploting/: plot_refresh_interface.h  plot_refresh_manager.cpp  plot_refresh_manager.h
EAEM_GUI/sensors/: aht20.cpp  aht20.h  max30102.cpp  max30102.h  sensor_data.h  sensor_factory.cpp  sensor_factory.h  sensor_interface.h  sensor_manager.cpp  sensor_manager.h  sensor_task.cpp  sensor_task.h
Faceqt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ecg sensor/: CMakeLists.txt  main_threaded_with_plot.cpp  mainwindow_threaded_with_plot.cpp  mainwindow_threaded_with_plot.h
face detect/: CMakeLists.txt  main03.cpp
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/build7/: CMakeCache.txt  FACEqt  Makefile  cmake_install.cmake
src/build7/FACEqt_autogen/: moc_predefs.h
src/build7/FACEqt_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/build7/FACEqt_autogen/include/: mainwindow.moc  mainwindow.moc.d  ui_mainwindow.h
